rem: handle update profile button

--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -13,7 +13,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <p class="mb-1"> <strong>Full Name: </strong> {{user.firstName}} {{user.lastName}}</p>
                 <button *ngIf="isTheRightUser" class="btn btn-primary">Update</button>
-                <!-- TODO: Handle update button -->
+                <!-- TODO: Handle update button implementation -->
               </div>
               <p class="mb-2 pb-1" style="color: #2b2a2a;"> <strong>Handle: </strong> {{user.handle}}</p>
               <p class="mb-2 pb-1" style="color: #2b2a2a;"> <strong>School:</strong> {{user.school ?? 'None'}}</p>
