refactor: Update navbar component and user service
- Update navbar component to use expanded-lg class for better responsiveness
- Add updateUser method to user service for updating user data
- Sort problemSet array in ContestDetailsComponent by problemHashtag
- Add UpdateProfileComponent to app.module.ts declarations
- Update profile.component.html to handle update profile button click event
- Add openUpdateProfileDialog method to profile.component.ts for opening update profile dialog
- Update contest-details.component.html to add routerLinkActive directive to navigation buttons

--- a/src/app/Components/contest-details/contest-details.component.html
+++ b/src/app/Components/contest-details/contest-details.component.html
@@ -55,13 +55,13 @@
                         <button class="link overview btn" (click)="onBtnClick('overview')" routerLinkActive="active">
                             Overview
                         </button>
-                        <button class="link problem btn" (click)="onBtnClick('problem')">
+                        <button class="link problem btn" (click)="onBtnClick('problem')" routerLinkActive="active">
                             Problem
                         </button>
-                        <button class="link status btn" (click)="onBtnClick('status')">
+                        <button class="link status btn" (click)="onBtnClick('status')" routerLinkActive="active">
                             Status
                         </button>
-                        <button class="link rank btn" (click)="onBtnClick('rank')">
+                        <button class="link rank btn" (click)="onBtnClick('rank')" routerLinkActive="active">
                             Rank
                         </button>
                     </div>
@@ -74,7 +74,7 @@
 
                 <div class="content container-fluid">
                     <div *ngIf="selectedButton === 'overview'">
-                        <app-overview></app-overview>
+                        <app-overview [problemSet]="problemSet"></app-overview>
                     </div>
                     <div *ngIf="selectedButton === 'problem'" class="container-fluid w-100 ms-0">
                         <app-problem-details></app-problem-details>
