--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand nav">
+<nav class="navbar navbar-expand-lg nav">
       <div class="logo">
         <img src="/assets/images/logo1-preview.jpg" alt="">
       </div>
