--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -12,7 +12,7 @@
             <div class="flex-grow-1 ms-3">
               <div class="d-flex justify-content-between align-items-center">
                 <p class="mb-1"> <strong>Full Name: </strong> {{user.firstName}} {{user.lastName}}</p>
-                <button *ngIf="isTheRightUser" class="btn btn-primary">Update</button>
+                <button *ngIf="isTheRightUser" class="btn btn-primary" (click)="openUpdateProfileDialog()">Update</button>
                 <!-- TODO: Handle update button implementation -->
               </div>
               <p class="mb-2 pb-1" style="color: #2b2a2a;"> <strong>Handle: </strong> {{user.handle}}</p>
