edit profile style 2

--- a/src/app/Components/contest-details/contest-details.component.html
+++ b/src/app/Components/contest-details/contest-details.component.html
@@ -34,14 +34,14 @@
                     <div class="col-12 text-center mt-2">
                         <div *ngIf="contest.contestStatus === 'SCHEDULED'" class="text-primary">
                             <span class="fw-bold">Start Countdown</span>
-                            <p class="countdown-time text-primary">{{ countdownTimer }}</p>
+                            <p class="countdown-time text-primary fw-bold fs-1">{{ countdownTimer }}</p>
                           </div>
                         <span *ngIf="contest.contestStatus === 'RUNNING'" id="info-running" class="text-success ">
                             <span class="fw-bold">Running</span>
-                            <p class="countdown-time text-success">{{ countdownTimer }}</p>
+                            <p class="countdown-time text-success fw-bold fs-1">{{ countdownTimer }}</p>
                         </span>
                         <span *ngIf="contest.contestStatus === 'ENDED'" class="text-danger" id="info-finished">
-                            <span class="countdown-time  fw-bold">{{contest.contestStatus}}</span>
+                            <span class="countdown-time  fw-bold fs-1">{{contest.contestStatus}}</span>
                         </span>
                     </div>
                     <div class="col-4 text-end" id="info-remaining"></div>
