--- a/src/app/Components/update-profile/update-profile.component.html
+++ b/src/app/Components/update-profile/update-profile.component.html
@@ -5,7 +5,8 @@
 
             <div class="mt-3 mb-3 d-flex">
                 <label for="handle" class="col-md-2 mt-2 me-3">Handle</label>
-                <input type="text" id="user-handle" class="form-control" [value]="this.data.user.handle" placeholder="Handle" disabled/>
+                <input type="text" id="user-handle" class="form-control" [value]="this.data.user.handle"
+                    placeholder="Handle" disabled />
             </div>
 
             <div class="row">
@@ -18,6 +19,9 @@
                         <span *ngIf="updateProfielForm.get('firstName')?.getError('required')" class="m-0"
                             style="color:red">Required</span>
                     </div>
+                    <div *ngIf="validationsErrors['firstName']" class="text-danger" role="alert">
+                        {{ validationsErrors.firstName }}
+                    </div>
                 </div>
                 <div class="col-6">
                     <label for="lastName">Last Name</label>
@@ -28,11 +32,25 @@
                         <span *ngIf="updateProfielForm.get('lastName')?.getError('required')" class="m-0"
                             style="color:red">Required</span>
                     </div>
+                    <div *ngIf="validationsErrors['lastName']" class="text-danger" role="alert">
+                        {{ validationsErrors.lastName }}
+                    </div>
+                </div>
+            </div>
+            <div class="mt-3 mb-3 d-flex">
+                <label for="email" class="col-md-2 mt-2 me-3">Email</label>
+                <input type="text" id="user-email" class="form-control" placeholder="Email" formControlName="email" />
+                <div *ngIf="updateProfielForm.get('email')?.errors && updateProfielForm.get('email')?.touched ">
+                    <span *ngIf="updateProfielForm.get('email')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <div *ngIf="validationsErrors['email']" class="text-danger" role="alert">
+                    {{ validationsErrors.email }}
                 </div>
             </div>
             <div class="mt-3 mb-3 d-flex">
                 <label for="school" class="col-md-2 mt-2 me-3">School</label>
-                <input type="text" required id="user-school" class="form-control" placeholder="School"
+                <input type="text" id="user-school" class="form-control" placeholder="School"
                     formControlName="school" />
                 <div *ngIf="updateProfielForm.get('school')?.errors && updateProfielForm.get('school')?.touched ">
                     <span *ngIf="updateProfielForm.get('school')?.getError('required')" class="m-0"
