--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -25,8 +25,8 @@
                 <div class=" text-center ">
                     <div class="w-100">
                     <div class="col-xs-8">
-                        <a (click)="refreshPage()" class="recrawl btn btn-secondary "> 
-                            <i class="fa fa-refresh me-1"></i>Recrawl</a>
+                        <button class="recrawl btn btn-secondary " (click)="recrawl()"> 
+                            <i class="fa fa-refresh me-1"></i>Recrawl</button>
                     </div>
                     </div>
                 </div>
